[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Alexei Kasaev <kasaev_97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.lint.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
